// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup />  snapshots renders RadioGroup in a column and with a label 1`] = `
<div
  aria-labelledby="ba333b4a-403d-4576-8187-9b73fd89eca1"
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id=""
      id="ba333b4a-403d-4576-8187-9b73fd89eca1"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup in a column and with a label 2`] = `
<div
  aria-labelledby="6aa19717-7bf2-41c7-bc79-5ae68a6be4b1"
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id=""
      id="6aa19717-7bf2-41c7-bc79-5ae68a6be4b1"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup in a row and with a label 1`] = `
<div
  aria-labelledby="6ff1ed49-0d00-4c18-9953-8cfd0bbf0551"
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id=""
      id="6ff1ed49-0d00-4c18-9953-8cfd0bbf0551"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup />  snapshots renders RadioGroup with radios 1`] = `
<div
  aria-labelledby="b3b749ed-2aba-4c46-8119-f6235b1de8f3"
  class="radioGroupContainer"
  data-automation-id=""
  role="radiogroup"
>
  <div
    class="radioGroupLabel"
  >
    <label
      class="label text"
      data-automation-id=""
      id="b3b749ed-2aba-4c46-8119-f6235b1de8f3"
    >
      <span
        class="appendedLabel"
      >
        Label
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <label
      class="label radio"
      data-automation-id="radio-1-field-label"
      for="radio-1"
      id="radio-1-field-label"
    >
      <span>
        <input
          class="radioInput"
          data-automation-id="radio-1-radio-input"
          id="radio-1"
          name="radio"
          readonly=""
          type="radio"
          value="radio-1"
        />
        <span
          class="box"
        />
      </span>
      <span
        class="appendedLabel"
      >
        Label 1
      </span>
    </label>
  </div>
  <div
    class="container"
  >
    <label
      class="label radio"
      data-automation-id="radio-2-field-label"
      for="radio-2"
      id="radio-2-field-label"
    >
      <span>
        <input
          class="radioInput"
          data-automation-id="radio-2-radio-input"
          id="radio-2"
          name="radio"
          readonly=""
          type="radio"
          value="radio-2"
        />
        <span
          class="box"
        />
      </span>
      <span
        class="appendedLabel"
      >
        Label 2
      </span>
    </label>
  </div>
</div>
`;
